# workbench-bujo

./: .gitignore  README.md
.claude-plugin/: plugin.json
agents/: bujo-orchestrator.md
commands/: bujo-capture.md  bujo-daily-ritual.md  bujo-habit-add.md  bujo-habit-done.md  bujo-habit-list.md  bujo-habit-remove.md  bujo.md  (+4 more)
scribe/: README.md  pyproject.toml
scribe/src/bujo_scribe_mcp/: __init__.py  __main__.py  config.py  context.py  locking.py  resolver.py  schemas.py  server.py
scribe/src/bujo_scribe_mcp/backends/: __init__.py  apple_notes.py  base.py
scribe/src/bujo_scribe_mcp/parsing/: __init__.py  model.py  parser.py  renderer.py
scribe/src/bujo_scribe_mcp/rules/: __init__.py  default.yaml  loader.py  schema.py
scribe/src/bujo_scribe_mcp/tools/: __init__.py  _matching.py  _mutations.py  apply_decisions.py  read.py  scaffold.py  scan.py  summarize.py
scribe/tests/: conftest.py  test_add_table.py  test_locking.py  test_parsing_body.py  test_parsing_headings.py  test_parsing_mono_native.py  test_read.py  test_scan_dates.py  test_scan_unrecognized.py  test_update_table.py  test_update_unrecognized.py
scribe/wheels/: bujo_scribe_mcp-0.10.0-py3-none-any.whl  bujo_scribe_mcp-0.10.1-py3-none-any.whl  bujo_scribe_mcp-0.9.0-py3-none-any.whl  bujo_scribe_mcp-0.9.1-py3-none-any.whl  bujo_scribe_mcp-0.9.2-py3-none-any.whl  bujo_scribe_mcp-0.9.3-py3-none-any.whl  bujo_scribe_mcp-0.9.4-py3-none-any.whl  bujo_scribe_mcp-0.9.5-py3-none-any.whl  bujo_scribe_mcp-0.9.6-py3-none-any.whl  bujo_scribe_mcp-0.9.7-py3-none-any.whl  bujo_scribe_mcp-0.9.8-py3-none-any.whl
(+23 files in other folders)
